<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vineyard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/vineyard" />

        <TextView
            android:id="@+id/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="60dp"
            android:text="@string/business"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="cursive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/business"
            android:layout_centerHorizontal="true"
            android:text="@string/statement"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:fontFamily="cursive" />

        <ImageView
            android:id="@+id/entrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vineyard"
            android:adjustViewBounds="true"
            android:src="@drawable/entrance" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vineyard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:paddingTop="25dp"
            android:text="@string/address"
            android:textSize="17sp"
            app:fontFamily="cursive" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:paddingLeft="82dp"
            android:paddingRight="82dp"
            android:paddingStart="82dp"
            android:text="@string/phone"
            android:textSize="17sp"
            app:fontFamily="cursive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp"
            android:text="@string/hours"
            android:textSize="17sp"
            app:fontFamily="cursive" />

        <ImageView
            android:id="@+id/winery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/entrance"
            android:adjustViewBounds="true"
            android:src="@drawable/winery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entrance"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"
            android:text="@string/experience"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="cursive" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/winery"
            android:src="@drawable/logo" />

    </RelativeLayout>

</ScrollView>